[gd_scene load_steps=38 format=3 uid="uid://n0siq684nkln"]

[ext_resource type="Script" path="res://scenes/combat/combat_screen.gd" id="1_2mq25"]
[ext_resource type="Script" path="res://ui/parallax_background.gd" id="1_ioiym"]
[ext_resource type="PackedScene" uid="uid://6wfbvrawswfu" path="res://scenes/combat/combat_background.tscn" id="3_kwdlw"]
[ext_resource type="Script" path="res://scenes/combat/fighter_ui.gd" id="18_0ntup"]
[ext_resource type="FontFile" uid="uid://le2vdo2626vw" path="res://assets/fonts/Montserrat-Medium.ttf" id="19_altx3"]
[ext_resource type="Script" path="res://scenes/combat/choose_attack.gd" id="19_umu76"]
[ext_resource type="PackedScene" uid="uid://cl54874jf84gw" path="res://ui/components/game_button.tscn" id="21_tyn66"]
[ext_resource type="Script" path="res://scenes/combat/enemy_attack_minigame.gd" id="22_burgw"]
[ext_resource type="Texture2D" uid="uid://7qjypsgo6fld" path="res://assets/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="23_1c1jq"]
[ext_resource type="Script" path="res://scenes/combat/minigames/minigame.gd" id="24_nj7kr"]
[ext_resource type="Script" path="res://scenes/combat/minigames/pick_any_minigame_at_random.gd" id="24_sd52g"]
[ext_resource type="Script" path="res://scenes/combat/visual_effects/shaker.gd" id="26_trtn3"]
[ext_resource type="PackedScene" uid="uid://cl0w0m24diim5" path="res://scenes/combat/in_combat_characters/combat_sprites/player_combat_sprite.tscn" id="27_ayf30"]
[ext_resource type="PackedScene" uid="uid://bjhcqiee4pfng" path="res://scenes/combat/visual_effects/health_change_effect.tscn" id="29_vyk3c"]
[ext_resource type="Texture2D" uid="uid://bk4a5uq2ctxfa" path="res://assets/Tiny Swords/UI/Buttons/Button_Red.png" id="30_fmxhc"]
[ext_resource type="PackedScene" uid="uid://bchbq0gh045e2" path="res://scenes/combat/in_combat_characters/combat_sprites/archer/purple_archer_combat_sprite.tscn" id="30_kqtiq"]
[ext_resource type="Texture2D" uid="uid://dmgyd3cc36nyw" path="res://assets/Tiny Swords/UI/Buttons/Button_Red_Pressed.png" id="31_q7j5i"]
[ext_resource type="AudioStream" uid="uid://dtb82lutc7pw7" path="res://assets/sounds/698375__sieuamthanh__happy-8bit-pixel-adenture-30.wav" id="32_u0vyi"]
[ext_resource type="AudioStream" uid="uid://cmvw64u16brep" path="res://assets/sounds/521642__fupicat__winharpsichord.wav" id="33_4pcem"]

[sub_resource type="Animation" id="Animation_7x3hf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChooseAttackMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-537, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyAttackMinigameMenu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1298, 0)]
}

[sub_resource type="Animation" id="Animation_gmpek"]
resource_name = "enemy_turn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyAttackMinigameMenu:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(709, 0), Vector2(1290, 0)]
}

[sub_resource type="Animation" id="Animation_olpn0"]
resource_name = "finish_player_turn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChooseAttackMenu:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-537, 0)]
}

[sub_resource type="Animation" id="Animation_2j6bx"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyAttackMinigameMenu:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1290, 0), Vector2(709, 0)]
}

[sub_resource type="Animation" id="Animation_6rx1i"]
resource_name = "player_turn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChooseAttackMenu:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-540, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5eng3"]
_data = {
"RESET": SubResource("Animation_7x3hf"),
"hide_enemy_ui": SubResource("Animation_gmpek"),
"hide_player_ui": SubResource("Animation_olpn0"),
"show_enemy_ui": SubResource("Animation_2j6bx"),
"show_player_ui": SubResource("Animation_6rx1i")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qgymt"]
texture = ExtResource("23_1c1jq")
texture_margin_left = 64.0
texture_margin_top = 32.0
texture_margin_right = 64.0
texture_margin_bottom = 64.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 39, 192, 141)

[sub_resource type="Resource" id="Resource_j6ynl"]
script = ExtResource("24_sd52g")
minigames_path = "res://scenes/combat/minigames"

[sub_resource type="Animation" id="Animation_eok75"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Correct:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(461, 278)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Correct:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1298, 0)]
}

[sub_resource type="Animation" id="Animation_s6gs8"]
resource_name = "correct_message"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Correct:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(461, -160), Vector2(461, 278)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Correct:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tddqf"]
resource_name = "hide_message"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Correct:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_260po"]
_data = {
"RESET": SubResource("Animation_eok75"),
"correct_message": SubResource("Animation_s6gs8"),
"hide_message": SubResource("Animation_tddqf")
}

[sub_resource type="Gradient" id="Gradient_worqc"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.572549, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sgtft"]
gradient = SubResource("Gradient_worqc")

[sub_resource type="Gradient" id="Gradient_b384p"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s8obr"]
gradient = SubResource("Gradient_b384p")

[sub_resource type="LabelSettings" id="LabelSettings_tf1us"]
font = ExtResource("19_altx3")
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nt2du"]
font = ExtResource("19_altx3")
font_size = 35
font_color = Color(0.741176, 0.290196, 0.301961, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2mq25")
help_message_player_turn = "Durante tu turno, puedes elegir entre uno de dos ataques o curarte.
Los tres números se calculan aleatoriamente cada turno entre 1 y 100, lee las opciones y elige la que te parezca más adecuada."
help_message_enemy_turn = "Durante el turno de tu oponente, debes elegir la respuesta correcta o serás atacado."

[node name="MenuTurnAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_5eng3")
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_ioiym")
background_speed = 200.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(0.556953, 0.556953, 0.556953, 1)
y_sort_enabled = true
motion_mirroring = Vector2(1900, 1200)

[node name="CombatBackground" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource("3_kwdlw")]

[node name="ChooseAttackMenu" type="Control" parent="." node_paths=PackedStringArray("combat")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
offset_left = -537.0
offset_right = -1.0
offset_bottom = 472.0
script = ExtResource("19_umu76")
combat = NodePath("..")

[node name="VBoxContainer" type="VBoxContainer" parent="ChooseAttackMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 250.0
offset_bottom = 470.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="PickYourMove" type="RichTextLabel" parent="ChooseAttackMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("19_altx3")
theme_override_font_sizes/normal_font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_qgymt")
bbcode_enabled = true
text = "[center]Elige una acción[/center]"
fit_content = true

[node name="Attack1" parent="ChooseAttackMenu/VBoxContainer" instance=ExtResource("21_tyn66")]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Cut
(damage = 50hp)"

[node name="Attack2" parent="ChooseAttackMenu/VBoxContainer" instance=ExtResource("21_tyn66")]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Slash
(damage = 50hp)"

[node name="Heal" parent="ChooseAttackMenu/VBoxContainer" instance=ExtResource("21_tyn66")]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Curarse
(heal = 30hp)"

[node name="EnemyAttackMinigameMenu" type="Control" parent="." node_paths=PackedStringArray("combat")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 98.0
offset_right = 634.0
offset_bottom = 518.0
grow_horizontal = 0
script = ExtResource("22_burgw")
minigames = Array[ExtResource("24_nj7kr")]([SubResource("Resource_j6ynl")])
combat = NodePath("..")

[node name="AnswerToBlock" type="RichTextLabel" parent="EnemyAttackMinigameMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -268.0
offset_right = 268.0
offset_bottom = 122.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("19_altx3")
theme_override_font_sizes/normal_font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_qgymt")
bbcode_enabled = true
text = "[center]Contesta correctamente para bloquear[/center]"
fit_content = true

[node name="MinigameContainer" type="Control" parent="EnemyAttackMinigameMenu"]
anchors_preset = 0
offset_top = 126.0
offset_right = 541.0
offset_bottom = 524.0

[node name="Correct" type="RichTextLabel" parent="EnemyAttackMinigameMenu"]
modulate = Color(1, 1, 1, 0)
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -178.0
offset_right = 216.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("19_altx3")
theme_override_font_sizes/normal_font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_qgymt")
bbcode_enabled = true
text = "[center][wave][font_size=40px]Correct![/font_size][/wave][/center]"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyAttackMinigameMenu"]
libraries = {
"": SubResource("AnimationLibrary_260po")
}

[node name="Player" type="Control" parent="." node_paths=PackedStringArray("opponent")]
unique_name_in_owner = true
anchors_preset = 0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 65.0
script = ExtResource("18_0ntup")
opponent = NodePath("../Enemy")
max_health = 200

[node name="SpritePivot" type="Node2D" parent="Player"]
position = Vector2(228, 535)

[node name="Sprite" parent="Player/SpritePivot" instance=ExtResource("27_ayf30")]

[node name="HealthBar" type="TextureProgressBar" parent="Player"]
z_index = 150
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 76.0
offset_top = 646.0
offset_right = 419.0
offset_bottom = 652.0
grow_horizontal = 2
grow_vertical = 2
max_value = 200.0
step = 0.01
value = 200.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_sgtft")
texture_progress = SubResource("GradientTexture2D_s8obr")

[node name="HealthLabel" type="Label" parent="Player/HealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_right = 74.0
offset_bottom = 85.0
grow_horizontal = 2
text = "200/200"
label_settings = SubResource("LabelSettings_tf1us")
horizontal_alignment = 1

[node name="Shaker" type="Node2D" parent="Player" node_paths=PackedStringArray("shaked_node")]
script = ExtResource("26_trtn3")
shaked_node = NodePath("../SpritePivot")

[node name="HealthChangeEffect" parent="Player" instance=ExtResource("29_vyk3c")]
position = Vector2(263, 485)

[node name="Enemy" type="Control" parent="." node_paths=PackedStringArray("opponent")]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 65.0
script = ExtResource("18_0ntup")
opponent = NodePath("../Player")
max_health = 200
attack_power = 100
heal_power = 20

[node name="SpritePivot" type="Node2D" parent="Enemy"]
position = Vector2(1035, 535)
scale = Vector2(-1, 1)

[node name="Sprite" parent="Enemy/SpritePivot" instance=ExtResource("30_kqtiq")]

[node name="HealthBar" type="TextureProgressBar" parent="Enemy"]
z_index = 150
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 798.0
offset_top = 647.0
offset_right = 1141.0
offset_bottom = 653.0
grow_horizontal = 2
grow_vertical = 2
max_value = 200.0
step = 0.01
value = 200.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_sgtft")
texture_progress = SubResource("GradientTexture2D_s8obr")

[node name="HealthLabel" type="Label" parent="Enemy/HealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_right = 74.0
offset_bottom = 85.0
grow_horizontal = 2
text = "200/200"
label_settings = SubResource("LabelSettings_tf1us")
horizontal_alignment = 1

[node name="Shaker" type="Node2D" parent="Enemy" node_paths=PackedStringArray("shaked_node")]
script = ExtResource("26_trtn3")
shaked_node = NodePath("../SpritePivot")

[node name="HealthChangeEffect" parent="Enemy" instance=ExtResource("29_vyk3c")]
position = Vector2(1024, 498)

[node name="HelpButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("30_fmxhc")
texture_pressed = ExtResource("31_q7j5i")

[node name="Label" type="Label" parent="HelpButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "?"
label_settings = SubResource("LabelSettings_nt2du")
horizontal_alignment = 1

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("32_u0vyi")
volume_db = -12.0
autoplay = true

[node name="VictoryFanfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_4pcem")
